updated hero section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
     <div class="up">
     <h2>Hands-on #2</h2>
-    <h1>HERO AND CARD</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deserunt accusamus perspiciatis ipsa ex doloremque sed nisi minima! Id numquam magnam optio accusamus, qui ipsa magni cum. Asperiores, aliquid perspiciatis?</p>
+    <h1>HERO AND CARD DESIGNS</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deserunt accusamus perspiciatis ipsa ex <br> doloremque sed nisi minima! Id numquam magnam optio accusamus, qui ipsa magni cum. Asperiores, aliquid perspiciatis?</p>
     </div>
 
+    <p>‎ ‎ ‎ </p>
     <p>‎ ‎ ‎ </p>
 
     <div class="down">
