updated hero section and added buttons to navigate back to home

--- a/pages/hero-gallery/index.html
+++ b/pages/hero-gallery/index.html
@@ -15,8 +15,8 @@
                 <h2>FIRST</h2>
             </div>
             <div>
-                <a href=""><button>HOME</button></a>
-                <a href=""><button>CARD</button></a>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
         <div class="hero">
@@ -27,7 +27,13 @@
 
     <div class="two">
         <div class="header">
-            <h1>second</h1>
+            <div>
+                <h2>FIRST</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
         </div>
         <div class="hero">
             <img src="../../assets/img/fjordbg.jpg" alt="">
@@ -37,7 +43,13 @@
 
     <div class="three">
         <div class="header">
-            <h1>third</h1>
+            <div>
+                <h2>FIRST</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
         </div>
         <div class="hero">
             <img src="../../assets/img/acnhbg.jpg" alt="">
@@ -47,7 +59,13 @@
 
     <div class="four">
         <div class="header">
-            <h1>third</h1>
+            <div>
+                <h2>FIRST</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
         </div>
         <div class="hero">
             <img src="../../assets/img/seattlebg.jpg" alt="">
@@ -57,7 +75,13 @@
 
     <div class="five">
         <div class="header">
-            <h1>third</h1>
+            <div>
+                <h2>FIRST</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
         </div>
         <div class="hero">
             <img src="../../assets/img/genshinbg.jpg" alt="">
