updated hero one. kinda final

--- a/pages/hero-gallery/index.html
+++ b/pages/hero-gallery/index.html
@@ -20,9 +20,22 @@
             </div>
         </div>
         <div class="hero">
-            <img src="../../assets/img/bulbabg.jpg" alt="">
-            <h2>HERO DESIGN</h2>
-        </div>
+            <img src="../../assets/img/bulbabg.jpg" alt="" class="bg">
+            <div class="top">
+            <h2>#001</h2>
+            <h1>BULBASAUR</h1>
+                <div class="type">
+                    <img src="../../assets/img/grasstype.png" alt="">
+                    <h2>GRASS</h2>
+                </div>
+            </div>
+            <div class="bottom">
+                <p>	Bulbasaur can be seen napping in bright sunlight. <br>There is a seed on its back. By soaking up the sun's rays, the seed grows progressively larger.</p>
+                <div class="cry">
+                    <a href=""><img src="../../assets/img/speaker.png" alt=""></a>
+                    <h2>Gen 1 Cry</h2>
+                </div>
+            </div>
     </div>
 
     <div class="two">
@@ -36,7 +49,7 @@
             </div>
         </div>
         <div class="hero">
-            <img src="../../assets/img/fjordbg.jpg" alt="">
+            <img src="../../assets/img/fjordbg.jpg" alt="" class="bg">
             <h2>HERO DESIGN</h2>
         </div>
     </div>
@@ -52,7 +65,7 @@
             </div>
         </div>
         <div class="hero">
-            <img src="../../assets/img/acnhbg.jpg" alt="">
+            <img src="../../assets/img/acnhbg.jpg" alt="" class="bg">
             <h2>HERO DESIGN</h2>
         </div>
     </div>
@@ -68,7 +81,7 @@
             </div>
         </div>
         <div class="hero">
-            <img src="../../assets/img/seattlebg.jpg" alt="">
+            <img src="../../assets/img/seattlebg.jpg" alt="" class="bg">
             <h2>HERO DESIGN</h2>
         </div>
     </div>
@@ -84,11 +97,12 @@
             </div>
         </div>
         <div class="hero">
-            <img src="../../assets/img/genshinbg.jpg" alt="">
+            <img src="../../assets/img/genshinbg.jpg" alt="" class="bg">
             <h2>HERO DESIGN</h2>
         </div>
     </div>
-  
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
 
