--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -9,6 +9,47 @@
 
 </head>
 <body>
-    
+    <div class="one">
+        <div class="static">
+
+        </div>
+        <div class="animated">
+
+        </div>
+    </div>
+    <div class="two">
+        <div class="static">
+
+        </div>
+        <div class="animated">
+
+        </div>
+    </div>
+    <div class="three">
+        <div class="static">
+
+        </div>
+        <div class="animated">
+
+        </div>
+    </div>
+    <div class="four">
+        <div class="static">
+
+        </div>
+        <div class="animated">
+
+        </div>
+    </div>
+    <div class="five">
+        <div class="static">
+
+        </div>
+        <div class="animated">
+
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
