updated heroes still incomplete

--- a/pages/hero-gallery/index.html
+++ b/pages/hero-gallery/index.html
@@ -19,11 +19,11 @@
                 <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
-        <div class="hero">
+        <div class="heroone">
             <img src="../../assets/img/bulbabg.jpg" alt="" class="bg">
             <div class="top">
             <h2>#001</h2>
-            <h1>BULBASAUR</h1>
+            <h1 class="bulb">BULBASAUR</h1>
                 <div class="type">
                     <img src="../../assets/img/grasstype.png" alt="">
                     <h2>GRASS</h2>
@@ -41,64 +41,134 @@
     <div class="two">
         <div class="header">
             <div>
-                <h2>FIRST</h2>
+                <h2>SECOND</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
                 <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
-        <div class="hero">
+        <div class="herotwo">
             <img src="../../assets/img/fjordbg.jpg" alt="" class="bg">
-            <h2>HERO DESIGN</h2>
+            <div class="empty">
+                <p></p>
+            </div>
+            <div class="twocontent">
+                <h1>PEACE AND SERENITY </h1>
+                <span>‎ ‎ ‎</span>
+                <span>‎ ‎ ‎</span>
+                <span>‎ ‎ ‎</span>
+                <p>Enjoy life on the water</p>
+                <p>Take part in spiritual activities</p>
+                <p>Be one with nature</p>
+                <p>Rediscover your sense of purpose</p>
+                <div class="twobuttons">
+                    <a href="">
+                        <button>BOOK NOW</button>
+                    </a>
+                    <a href="">
+                        <button>TAKE A TOUR</button>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="three">
         <div class="header">
             <div>
-                <h2>FIRST</h2>
+                <h2>THIRD</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
                 <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
-        <div class="hero">
+        <div class="herothree">
             <img src="../../assets/img/acnhbg.jpg" alt="" class="bg">
-            <h2>HERO DESIGN</h2>
+            <div class="up">
+                <div class="ac">
+                    <h1>ANIMAL CROSSING:</h1>
+                </div>
+                <div class="paper">
+                    <img src="../../assets/img/539d21c9dbe41cddc054ccf3b790137c.png" alt="">
+                </div>        
+                <div class="nh">
+                    <h1>NEW HORIZONS</h1>
+                </div>
+            </div>
+        
+            <div class="down">
+                <div class="acnhpic">
+                    <img src="../../assets/img/crossing.png" alt="">
+                </div>
+                <div class="acnhinfo">
+                    <p>‎ ‎ ‎ </p>
+                    <h2>What's New?</h2>
+                    <p>In Animal Crossing: New Horizons you will 
+                       get to play as <br> someone who is taking a tour of Nook's 
+                       Getaway Package. <br>Become the island representative and
+                       improve your island <br>to its fullest potential!
+                    </p>
+                </div>
+                <p>‎ ‎ ‎ </p>
+                <p class="acnhcp">ALL RIGHTS RESERVED BY NINTENDO</p>
         </div>
     </div>
 
     <div class="four">
         <div class="header">
             <div>
-                <h2>FIRST</h2>
+                <h2>FOURTH</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
                 <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
-        <div class="hero">
+        <div class="herofour">
             <img src="../../assets/img/seattlebg.jpg" alt="" class="bg">
-            <h2>HERO DESIGN</h2>
+            <div class="seattle">
+            <h1>SEATTLE, WASHINGTON</h1>
+            <h2>"The Emerald City. The Jet City. The Rain City"</h2>
+            </div>
+            <div class="seattlegallery">
+                <div class="tourist">
+                    <img src="" alt="">
+                    <p>PIKE PLACE MARKET</p>
+                </div>
+                <div class="tourist">
+                    <img src="" alt="">
+                    <p>THE SPACE NEEDLE</p>
+                </div>
+                <div class="tourist">
+                    <img src="" alt="">
+                    <p>THE GREAT WHEEL</p>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="five">
         <div class="header">
             <div>
-                <h2>FIRST</h2>
+                <h2>FIFTH</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
                 <a href="../card-gallery/index.html"><button>CARD</button></a>
             </div>
         </div>
-        <div class="hero">
+        <div class="herofive">
             <img src="../../assets/img/genshinbg.jpg" alt="" class="bg">
-            <h2>HERO DESIGN</h2>
+            <div class="liyueinfo">
+                <h1>ZHONGLI</h1>
+                <h2>Vago Mundo</h2>
+                <p>MORAX IS EME EME</p>
+            </div>
+            <div class="zhongli">
+                <img src="../../assets/img/zhongli.png" alt="">
+            </div>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
