updated hero designs. no animation still

--- a/pages/hero-gallery/index.html
+++ b/pages/hero-gallery/index.html
@@ -129,20 +129,21 @@
         <div class="herofour">
             <img src="../../assets/img/seattlebg.jpg" alt="" class="bg">
             <div class="seattle">
-            <h1>SEATTLE, WASHINGTON</h1>
-            <h2>"The Emerald City. The Jet City. The Rain City"</h2>
+            <h1>SEATTLE, WASHINGTON, USA</h1>
+            <h2 class="nickname">"The Emerald City. The Jet City. The Rain City"</h2>
+            <H2 class="sights">SEE THE SIGHTS</H2>
             </div>
             <div class="seattlegallery">
                 <div class="tourist">
-                    <img src="" alt="">
+                    <img src="../../assets/img/ppm.jpg" alt="">
                     <p>PIKE PLACE MARKET</p>
                 </div>
                 <div class="tourist">
-                    <img src="" alt="">
+                    <img src="../../assets/img/sn.webp" alt="">
                     <p>THE SPACE NEEDLE</p>
                 </div>
                 <div class="tourist">
-                    <img src="" alt="">
+                    <img src="../../assets/img/wheel.jpg" alt="">
                     <p>THE GREAT WHEEL</p>
                 </div>
             </div>
@@ -162,9 +163,11 @@
         <div class="herofive">
             <img src="../../assets/img/genshinbg.jpg" alt="" class="bg">
             <div class="liyueinfo">
-                <h1>ZHONGLI</h1>
+                <h1><br>ZHONGLI</h1>
                 <h2>Vago Mundo</h2>
-                <p>MORAX IS EME EME</p>
+                <p>A mysterious expert contracted by the <br>Wangsheng Funeral Parlor. <br>Extremely knowledgeable in all things.</p>
+                <p>‎ ‎ ‎ </p>
+                <img src="../../assets/img/order.gif" alt="">
             </div>
             <div class="zhongli">
                 <img src="../../assets/img/zhongli.png" alt="">
