updated hero designs and landing page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="up">
     <h2>Hands-on #2</h2>
     <h1>HERO AND CARD DESIGNS</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui deserunt accusamus perspiciatis ipsa ex <br> doloremque sed nisi minima! Id numquam magnam optio accusamus, qui ipsa magni cum. Asperiores, aliquid perspiciatis?</p>
+    <p>This is the landing page for Hands-on #2 which aims to test the students' <br>
+       skills in designing static and animated hero and card elements. <br>
+       Click either the HEROES or CARDS button to be redirected.
+    </p>
     <div class="down">
         <a href="./pages/hero-gallery/index.html">
         <button class="hero">HEROES</button>
