--- a/pages/hero-gallery/index.html
+++ b/pages/hero-gallery/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HERO GALLERY</title>
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -12,7 +12,7 @@
     <div class="one">
         <div class="header">
             <div>
-                <h2>FIRST</h2>
+                <h2>FIRST - STATIC</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
@@ -36,12 +36,39 @@
                     <h2>Gen 1 Cry</h2>
                 </div>
             </div>
-    </div>
+        </div>
 
+        <div class="header">
+            <div>
+                <h2>FIRST - ANIMATED</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
+        </div>
+        <div class="heroone">
+            <img src="../../assets/img/bulbabg.jpg" alt="" class="bg">
+            <div class="top">
+            <h2>#001</h2>
+            <h1 class="bulba">BULBASAUR</h1>
+                <div class="type">
+                    <img src="../../assets/img/grasstype.png" alt="" class="grasstype">
+                    <h2 class="typegrass">GRASS</h2>
+                </div>
+            </div>
+            <div class="bottom">
+                <p>	Bulbasaur can be seen napping in bright sunlight. <br>There is a seed on its back. By soaking up the sun's rays, the seed grows progressively larger.</p>
+                <div class="cry">
+                    <a href=""><img src="../../assets/img/speaker.png" alt=""></a>
+                    <h2>Gen 1 Cry</h2>
+                </div>
+            </div>
+        </div>
     <div class="two">
         <div class="header">
             <div>
-                <h2>SECOND</h2>
+                <h2>SECOND-STATIC</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
@@ -72,12 +99,47 @@
                 </div>
             </div>
         </div>
+
+        <div class="header">
+            <div>
+                <h2>SECOND-ANIMATED</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
+        </div>
+        <div class="herotwo">
+            <img src="../../assets/img/fjordbg.jpg" alt="" class="bg">
+            <div class="empty">
+                <p></p>
+            </div>
+            <div class="twocontent">
+                <h1 class="peace">PEACE AND SERENITY </h1>
+                <span>‎ ‎ ‎</span>
+                <span>‎ ‎ ‎</span>
+                <span>‎ ‎ ‎</span>
+                <p class="information">Enjoy life on the water</p>
+                <p class="information">Take part in spiritual activities</p>
+                <p class="information">Be one with nature</p>
+                <p class="information">Rediscover your sense of purpose</p>
+                <div class="twobuttons">
+                    <a href="">
+                        <button class="now">BOOK NOW</button>
+                    </a>
+                    <a href="">
+                        <button class="now">TAKE A TOUR</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <div class="three">
         <div class="header">
             <div>
-                <h2>THIRD</h2>
+                <h2>THIRD-STATIC</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
@@ -114,12 +176,54 @@
                 <p>‎ ‎ ‎ </p>
                 <p class="acnhcp">ALL RIGHTS RESERVED BY NINTENDO</p>
         </div>
+        </div>
+
+        <div class="header">
+            <div>
+                <h2>THIRD-ANIMATED</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
+        </div>
+        <div class="herothree">
+            <img src="../../assets/img/acnhbg.jpg" alt="" class="bg">
+            <div class="up">
+                <div class="aca">
+                    <h1>ANIMAL CROSSING:</h1>
+                </div>
+                <div class="paper">
+                    <img src="../../assets/img/539d21c9dbe41cddc054ccf3b790137c.png" alt="">
+                </div>        
+                <div class="nha">
+                    <h1>NEW HORIZONS</h1>
+                </div>
+            </div>
+        
+            <div class="down">
+                <div class="acnhpic">
+                    <img src="../../assets/img/crossing.png" alt="" class="bga">
+                </div>
+                <div class="acnhinfo">
+                    <p>‎ ‎ ‎ </p>
+                    <h2>What's New?</h2>
+                    <p>In Animal Crossing: New Horizons you will 
+                       get to play as <br> someone who is taking a tour of Nook's 
+                       Getaway Package. <br>Become the island representative and
+                       improve your island <br>to its fullest potential!
+                    </p>
+                </div>
+                <p>‎ ‎ ‎ </p>
+                <p class="acnhcp">ALL RIGHTS RESERVED BY NINTENDO</p>
+        </div>
+        </div>
     </div>
 
     <div class="four">
         <div class="header">
             <div>
-                <h2>FOURTH</h2>
+                <h2>FOURTH-STATIC</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
@@ -148,12 +252,44 @@
                 </div>
             </div>
         </div>
+
+        <div class="header">
+            <div>
+                <h2>FOURTH-ANIMATED</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
+        </div>
+        <div class="herofour">
+            <img src="../../assets/img/seattlebg.jpg" alt="" class="bg">
+            <div class="seattle">
+            <h1 class="cityname">SEATTLE, WASHINGTON, USA</h1>
+            <h2 class="nickname">"The Emerald City. The Jet City. The Rain City"</h2>
+            <H2 class="sights">SEE THE SIGHTS</H2>
+            </div>
+            <div class="seattlegallery">
+                <div class="tourista">
+                    <img src="../../assets/img/ppm.jpg" alt="">
+                    <p>PIKE PLACE MARKET</p>
+                </div>
+                <div class="tourista">
+                    <img src="../../assets/img/sn.webp" alt="">
+                    <p>THE SPACE NEEDLE</p>
+                </div>
+                <div class="tourista">
+                    <img src="../../assets/img/wheel.jpg" alt="">
+                    <p>THE GREAT WHEEL</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="five">
         <div class="header">
             <div>
-                <h2>FIFTH</h2>
+                <h2>FIFTH-STATIC</h2>
             </div>
             <div>
                 <a href="./../../index.html"><button>HOME</button></a>
@@ -171,6 +307,29 @@
             </div>
             <div class="zhongli">
                 <img src="../../assets/img/zhongli.png" alt="">
+            </div>
+        </div>
+
+        <div class="header">
+            <div>
+                <h2>FIFTH-ANIMATED</h2>
+            </div>
+            <div>
+                <a href="./../../index.html"><button>HOME</button></a>
+                <a href="../card-gallery/index.html"><button>CARD</button></a>
+            </div>
+        </div>
+        <div class="herofive">
+            <img src="../../assets/img/genshinbg.jpg" alt="" class="bg">
+            <div class="liyueinfoanim">
+                <h1><br>ZHONGLI</h1>
+                <h2>Vago Mundo</h2>
+                <p>A mysterious expert contracted by the <br>Wangsheng Funeral Parlor. <br>Extremely knowledgeable in all things.</p>
+                <p>‎ ‎ ‎ </p>
+                <img src="../../assets/img/order.gif" alt="">
+            </div>
+            <div class="zhongli">
+                <img src="../../assets/img/zhongli.png" alt=""  class="splash">
             </div>
         </div>
     </div>
