made one card design

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -9,9 +9,26 @@
 
 </head>
 <body>
+    <div class="header">
+        <div>
+            <h2>CARD DESIGNS</h2>
+        </div>
+        <div>
+            <a href="./../../index.html"><button>HOME</button></a>
+            <a href="../card-gallery/index.html"><button>CARD</button></a>
+        </div>
+    </div>
+    <span>‎ ‎ ‎</span>
+    <span>‎ ‎ ‎</span>
+    <span>‎ ‎ ‎</span>
     <div class="one">
         <div class="static">
-
+            <div class="bulbapic">
+            <img src="../../assets/img/bulbabg.jpg" alt="" class="bulba">
+            <div>
+                <h2>BULBASAUR</h2>
+            </div>
+            </div>
         </div>
         <div class="animated">
 
