updated card section

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -36,7 +36,19 @@
     </div>
     <div class="two">
         <div class="static">
-
+            <div class="twomain">
+            <div class="left">
+                <img src="../../assets/img/zhongli.png" alt="">
+            </div>
+            <div class="right">
+                <h2>ZHONGLI</h2>
+                <p>A mysterious expert contracted by the 
+                    <br>Wangsheng Funeral Parlor. 
+                    <br>Extremely knowledgeable in all things.
+                    <br>He wields a polearm and a Geo Vision.
+                </p>
+            </div>
+            </div>
         </div>
         <div class="animated">
 
@@ -44,7 +56,26 @@
     </div>
     <div class="three">
         <div class="static">
-
+            <div class="socheader">
+                <div class="soclogo">
+                    <img src="" alt="">
+                </div>
+                <div class="socname">
+                    <h2>Tweeter</h2>
+                </div>
+            </div>
+            <div class="socimg">
+                <img src="" alt="">
+            </div>
+            <div class="socstats">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="socinfo">
+                <h2></h2>
+                <p></p>
+            </div>
         </div>
         <div class="animated">
 
