added all static designs for cards

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -56,25 +56,27 @@
     </div>
     <div class="three">
         <div class="static">
+            <div class="third">
             <div class="socheader">
                 <div class="soclogo">
-                    <img src="" alt="">
+                    <img src="../../assets/img/twit.png" alt="">
                 </div>
                 <div class="socname">
                     <h2>Tweeter</h2>
                 </div>
             </div>
             <div class="socimg">
-                <img src="" alt="">
+                <img src="../../assets/img/fjordbg.jpg" alt="">
             </div>
             <div class="socstats">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="../../assets/img/heart.png" alt="">
+                <img src="../../assets/img/tot.png" alt="">
+                <img src="../../assets/img/bkmrk.png" alt="">
             </div>
             <div class="socinfo">
-                <h2></h2>
-                <p></p>
+                <h2>@1234.est</h2>
+                <p>Gusto ko na magbakasyon<br>:( END THE SEM!!!!</p>
+            </div>
             </div>
         </div>
         <div class="animated">
@@ -83,7 +85,13 @@
     </div>
     <div class="four">
         <div class="static">
-
+            <div class="classic">
+                <h1>THIS IS A CLASSIC CARD</h1>
+                <p>‎ ‎ ‎ </p>
+                <h2>THIS IS A MINOR HEADLINE</h2>
+                <p>‎ ‎ ‎ </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur earum numquam perspiciatis quam delectus, unde sed dignissimos ullam doloribus, sit odit, soluta rerum adipisci quo fuga maiores id excepturi reprehenderit.</p>
+            </div>
         </div>
         <div class="animated">
 
@@ -91,7 +99,19 @@
     </div>
     <div class="five">
         <div class="static">
-
+            <div class="outline">
+                <div class="amount">
+                    <h2>$100</h2>
+                    <h2>$100</h2>
+                </div>
+                <div class="face">
+                    <img src="../../assets/img/rowlet.png" alt="">
+                </div>
+                <div class="amount">
+                    <h2>$100</h2>
+                    <h2>$100</h2>
+                </div>
+            </div>
         </div>
         <div class="animated">
 
