updated card designs

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <a href="./../../index.html"><button>HOME</button></a>
-            <a href="../card-gallery/index.html"><button>CARD</button></a>
+            <a href="../hero-gallery/index.html"><button>HERO</button></a>
         </div>
     </div>
     <span>‎ ‎ ‎</span>
