made final touches to card designs

--- a/pages/card-gallery/index.html
+++ b/pages/card-gallery/index.html
@@ -31,7 +31,12 @@
             </div>
         </div>
         <div class="animated">
-
+            <div class="bulbapic">
+                <img src="../../assets/img/bulbabg.jpg" alt="" class="bulba">
+                <div>
+                    <h2 class="greenbulba">BULBASAUR</h2>
+                </div>
+                </div>
         </div>
     </div>
     <div class="two">
@@ -51,7 +56,19 @@
             </div>
         </div>
         <div class="animated">
-
+            <div class="twomain">
+                <div class="left">
+                    <img src="../../assets/img/zhongli.png" alt="" class="zhongpic">
+                </div>
+                <div class="right">
+                    <h2>ZHONGLI</h2>
+                    <p>A mysterious expert contracted by the 
+                        <br>Wangsheng Funeral Parlor. 
+                        <br>Extremely knowledgeable in all things.
+                        <br>He wields a polearm and a Geo Vision.
+                    </p>
+                </div>
+                </div>
         </div>
     </div>
     <div class="three">
@@ -80,7 +97,29 @@
             </div>
         </div>
         <div class="animated">
-
+            <div class="third">
+                <div class="socheader">
+                    <div class="soclogo">
+                        <img src="../../assets/img/twit.png" alt="">
+                    </div>
+                    <div class="socname">
+                        <h2>Tweeter</h2>
+                    </div>
+                </div>
+                <div class="socimg">
+                    <img src="../../assets/img/fjordbg.jpg" alt="">
+                </div>
+                <div class="socstats">
+                    <img src="../../assets/img/heart.png" alt="" class="actions">
+                    <img src="../../assets/img/tot.png" alt="" class="actions">
+                    <img src="../../assets/img/bkmrk.png" alt="" class="actions">
+                </div>
+                <div class="socinfo">
+                    <h2 class="username">@1234.est</h2>
+                    <p>Gusto ko na magbakasyon<br>:( END THE SEM!!!!</p>
+                </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="four">
@@ -94,7 +133,13 @@
             </div>
         </div>
         <div class="animated">
-
+            <div class="classic">
+                <h1 class="maintitle">THIS IS A CLASSIC CARD</h1>
+                <p>‎ ‎ ‎ </p>
+                <h2 class="secondtitle">THIS IS A MINOR HEADLINE</h2>
+                <p>‎ ‎ ‎ </p>
+                <p class="textrandom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur earum numquam perspiciatis quam delectus, unde sed dignissimos ullam doloribus, sit odit, soluta rerum adipisci quo fuga maiores id excepturi reprehenderit.</p>
+            </div>
         </div>
     </div>
     <div class="five">
@@ -114,7 +159,19 @@
             </div>
         </div>
         <div class="animated">
-
+            <div class="outline">
+                <div class="amount">
+                    <h2 class="cost">$100</h2>
+                    <h2 class="cost">$100</h2>
+                </div>
+                <div class="face">
+                    <img src="../../assets/img/rowlet.png" alt="" class="rowletmoving">
+                </div>
+                <div class="amount">
+                    <h2 class="cost">$100</h2>
+                    <h2 class="cost">$100</h2>
+                </div>
+            </div>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
